# sovereign-universal-wallet

./: .gitignore  Cargo.toml  README.md
crates/macro-helpers/: Cargo.toml
crates/macro-helpers/src/: schema.rs
crates/macros/src/: lib.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/schema/src/schema/: mod.rs  tests.rs
