[workspace]
resolver = "2"
members = [
    "crates/schema",
    "crates/macros",
    "crates/macro-helpers",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-universal-wallet"

[workspace.dependencies]
sov-universal-wallet = { path = "crates/schema" }
sov-universal-wallet-macros = { path = "crates/macros" }
sov-universal-wallet-macro-helpers = { path = "crates/macro-helpers" }

nmt-rs = { version = "0.2.3", features = ["serde", "borsh"] }
arrayvec = { version = "0.7.6", features = ["serde", "borsh"] }
bs58 = { version = "0.5.1", default-features = false, features = ["std", "alloc"] }
borsh = { version = "1", features = ["derive"] }
convert_case = { version = "0.8", default-features = false }
darling = "=0.20.10"
hex = { version = "0.4.3" }
proc-macro2 = { version = "1.0" }
quote = "1.0"
serde = { version = "1.0.208", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_arrays = "0.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.9", features = ["schemars_0_8"] }
sha2 = { version = "0.10.8", default-features = false }
syn = { version = "=2.0.98", features = ["parsing", "derive"] }
syn_derive = { version = "0.2.0" }
thiserror = "2.0"
bech32 = { version = "0.11" }
schemars = { version = "0.8.21", features = ["derive"] }
